--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap'); /* FONT-FAMILY HACHI MARU POP */
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
