--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,1 +1,64 @@
-<p>about-page works!</p>
+<div class="about_container">
+
+    <div class="page_content">
+        <div class="page_title">
+            <h1>About me</h1>
+            <div class="page_title_highlight" >
+                <span class="red_lines"></span>
+                <span class="red_lines"></span>
+            </div>
+        </div>
+        <div class="about_content text_center">
+            <h1>Hey! I'm Iorga Florin Alexandru, a <span style="color: #cc0000;"> Junior Web Developer</span>.</h1>
+            <div class="about_info">
+                <p>I'm an aspiring programmer, looking to work with other developers to create beatiful websites, useful applications that can help others and much more.</p>
+                <p>I'm truly passionate about programming and the reason for that is pretty simple. Programming offers you an amazing freedom in creating anything and the complex process in doing so truly test you as a person.</p>
+                <p>I consider myself a well-organised person and I'll always try to learn from my mistakes, look for new opportunities and better my understanding of someone or something.</p>
+            </div>
+            <div class="a_buttons">
+                <a routerLink="/Contact" class="a_btn">Contact me!</a>
+                <a class="a_btn remove_margin">View CV</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="more_info">
+        <ul>
+            <li>
+                <p><b>Birthday: </b></p>
+                <p>23 June 2000</p>
+            </li>
+            <li>
+                <p><b>Email </b></p>
+                <p>iorgaflorinalexandru@gmail.com</p>
+            </li>
+            <li>
+                <p><b>Phone: </b></p>
+                <p>0770550827</p>
+            </li>
+            <li>
+                <p><b>Freelance: </b></p>
+                <p>Available</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <p><b>Age: </b></p>
+                <p>20</p>
+            </li>
+            <li>
+                <p><b>City: </b></p>
+                <p>Pitesti</p>
+            </li>
+            <li>
+                <p><b>Country: </b></p>
+                <p>Romania</p>
+            </li>
+            <li>
+                <p><b>Education: </b></p>
+                <p>S.E.F.I (CS)</p>
+            </li>
+        </ul>
+    </div>
+
+</div>
