--- a/src/app/aside-navbar/aside-navbar.component.html
+++ b/src/app/aside-navbar/aside-navbar.component.html
@@ -1,6 +1,10 @@
-<aside class="aside_navbar">
-    <div class="logo">
-        <img src="" alt="logo">  
+<aside [class.open]="nav_open" class="aside_navbar">
+    <div (mouseover)="show_flag()" (mouseleave)="hide_flag()" class="logo">
+        <h1>
+            <span [class.blue]="flag" class="logo_char"><</span>
+            <span [class.yellow]="flag" class="logo_char special">/</span>
+            <span [class.red]="flag" class="logo_char">></span>
+        </h1>
     </div>
     <nav class="navbar">
         <ul>
@@ -61,3 +65,8 @@
         <p>©2021 Made by Iorga Florin Alexandru</p>
     </div>
 </aside>
+<div  class="mobile_button">
+    <button [class.move_btn]="nav_open" (click)="open_navbar()" class="a_btn m_btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg></button>
+</div>
