--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -1,1 +1,22 @@
-<p>contact-page works!</p>
+<div class="contact_container">
+        <div class="page_title">
+            <h1>Contact</h1>
+            <div class="page_title_highlight" >
+                <span class="red_lines"></span>
+                <span class="red_lines"></span>
+            </div>
+        </div>
+        <div class="contact_form">
+            <form >
+                <div class="op">
+                    <input type="text" name="Name" placeholder="Name">
+                    <input type="text" name="Email" placeholder="Email">
+                </div>
+                <div class="msg">
+                    <input type="text" name="Subject" placeholder="Subject">
+                    <textarea name="" cols="30" rows="10" placeholder="Message"></textarea>
+                </div>
+                <button class="a_btn">Send</button>
+            </form>
+        </div>
+</div>
