--- a/src/app/skills-page/skills-page.component.html
+++ b/src/app/skills-page/skills-page.component.html
@@ -1,1 +1,86 @@
-<p>skills-page works!</p>
+<div class="skills_container">
+    <div class="page_content">
+        <div class="page_title">
+            <h1>Skills</h1>
+            <div class="page_title_highlight" >
+                <span class="red_lines"></span>
+                <span class="red_lines"></span>
+            </div>
+        </div>
+        <div class="skills_content text_center">
+            <p>I've started learning programming with C++ and learned the basics and O.O.P in it, then did some courses on python on <a href="https://www.edx.org/" target="_blank">edX</a> and <a href="https://www.udemy.com/" target="_blank">Udemy</a>. Also from Udemy did a free course for Java.</p>
+            <p>After all that i started learning web development through <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>. From that I learned HTML, CSS and JavaScript by doing some awesome projects (Example: Youtube video page, Apple old site etc.) then i wanted more complexity to my websites and did a course on ASP .NET and builded a website with a connection to a database (SQL) and did a course on Angular too.</p>
+            <p>Currently I am a student at University of Pitesti, S.E.F.I. to be more exact and have no working experience though I want to change that. :)</p>
+            <div class="a_buttons">
+                <a routerLink="/Contact" class="a_btn remove_margin">Contact me!</a>
+            </div>
+        </div>
+    </div>
+    <div class="skills_info">
+        <div class="skill_bar">
+            <div class="bar_info">
+                <h1>HTML</h1>
+                <h1>90%</h1>
+            </div>
+            <div class="bar_progress">
+                <div class="bar" style="width: 90%;"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+
+        <div class="skill_bar">
+            <div class="bar_info">
+                <h1>CSS</h1>
+                <h1>90%</h1>
+            </div>
+            <div class="bar_progress">
+                <div class="bar" style="width: 90%;"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+
+        <div class="skill_bar">
+            <div class="bar_info">
+                <h1>JavaScript</h1>
+                <h1>65%</h1>
+            </div>
+            <div class="bar_progress">
+                <div class="bar" style="width: 65%;"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+        
+        <div class="skill_bar">
+            <div class="bar_info">
+                <h1>Angular</h1>
+                <h1>60%</h1>
+            </div>
+            <div class="bar_progress">
+                <div class="bar" style="width: 60%;"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+
+        <div class="skill_bar">
+            <div class="bar_info">
+                <h1>Python</h1>
+                <h1>70%</h1>
+            </div>
+            <div class="bar_progress">
+                <div class="bar" style="width: 70%;"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+
+        <div class="skill_bar">
+            <div class="bar_info">
+                <h1>.NET(#C)</h1>
+                <h1>70%</h1>
+            </div>
+            <div class="bar_progress">
+                <div class="bar" style="width: 70%;"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+    </div>
+</div>
