--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <app-aside-navbar></app-aside-navbar>
-  <router-outlet></router-outlet>
+  <div class="aside_container">
+    <app-aside-navbar></app-aside-navbar>
+  </div>
+  <div [@routeAnimations]="prepareRoute(outlet)" class="page_container">
+    <router-outlet #outlet="outlet"></router-outlet>
+  </div>
 </div>
