--- a/src/app/aside-navbar/aside-navbar.component.css
+++ b/src/app/aside-navbar/aside-navbar.component.css
@@ -5,12 +5,41 @@
     align-items: center;
     height: 100vh;
     max-width: 100px;    
-    background-color: white;
+    background-color: rgb(240,244,247);
+    border-right: 2px solid rgb(207, 211, 214);
+    position: fixed;
 }
 
-/* .logo img{
-    width: 150px;
-} */
+.logo{
+    padding: 5px;
+    cursor: pointer;
+}
+
+.logo h1{
+    font-size: 3rem;
+    font-family: "Roboto";
+}
+
+.logo_char{
+    color:#504e70;
+}
+
+.special{
+    color: #cc0000;
+}
+
+.blue{
+    color:blue;
+}
+
+.yellow{
+    color: yellow;
+}
+
+.red{
+    color: red;
+}
+
 
 .navbar,.navbar ul{
     width: 100%;
@@ -19,11 +48,9 @@
 .navbar ul li{
     list-style: none;
     width: 100%;
-    margin-bottom: 0.5px; 
+    margin-bottom: 1rem; 
 
 }
-
-
 
 .Link{
     display: flex;
@@ -33,29 +60,26 @@
     text-align: center;
     width: 100%;
     height: 100%;
-    border: 1px solid black;
     z-index: 1;
     transition: 0.5s;
-    color: black;
+    color: #302e4d;
+    outline-width: 0;
 }
 
-.Link:hover{
-    transition: 0.5s;
-    width: 110px;
-}
 
 .link_active{
-    color: red;
-    width: 110px;
+    color: #cc0000;
     cursor: default;
+
 }
 
 .link_icon{
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgb(240,244,247);
     z-index: 1;
     padding: 10px;
+    transition: 0.5s;
 
 }
 
@@ -65,13 +89,12 @@
 }
 
 .link_icon:hover{
-    background-color: transparent;
-    color: transparent;
+    opacity: 0;
     transition: 0.5s;
 }
 
 .Link p{
-    color: red;
+    color: #cc0000;
     font-size: 1.5;
     font-family: "Lato";
     position: absolute;
@@ -83,4 +106,42 @@
     font-size: 12px;
     text-align: center;
     width: 80%;
+    margin-bottom: 15px;
+}
+
+.m_btn{
+    width: 50px;
+    height: 50px;
+    display: none;
+    z-index: 10;
+}
+
+.m_btn svg{
+    margin-top: 5px;
+    width: 40px;
+    height: 40px;
+}
+
+@media only screen and (max-width:700px){
+    .aside_navbar{
+        left: -100%;
+        transition: 0.5s;
+    }
+
+    .m_btn{
+        display: block;
+        position: fixed;
+        left: 15px;
+        top: 15px;
+    }
+    
+    .open{
+        left: 0;
+        transition: 0.5s;
+    }
+
+    .move_btn{
+        left:110px;
+    }
+    
 }
