--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,3 +1,94 @@
-.string_text{
+.home_container{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding-right: 100px;
+}
+
+.string_line{
+    display: flex;
+}
+
+.first:nth-child(16){
+    color: #cc0000;
+}
+
+.first:nth-child(22){
+    color: #cc0000;
+}
+
+.first:nth-child(25){
+    color: #cc0000;
+}
+
+.social_links{
+    margin-top: 50px;
+    display: flex;
+    height: 40px;
+}
+
+.social_btn{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: #cc0000;
+    border: none;
+    position: relative;
+    outline-width: 0;
+}
+
+.social_btn:hover{
+    color: red;
+    background-color: inherit;
+    width: 45px;
+    height: 45px;
+}
+
+.social_btn svg{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.home_btn{
+    margin-top: 50px;
+}
+
+@media only screen and (max-width:1520px){
+    .home_container{
+        height: 79vh;
+        padding-right: 0;
+    }
+}
+
+@media only screen and (max-width:895px){
+    .first:nth-child(16){
+        color: blue;
+    }
+}
+
+@media only screen and (max-width:700px){
+
+    .home_container{
+        height: 87.5vh;
+    }
+
+    .second:nth-child(1){
+        display: none;
+    }
+    .third:nth-child(1){
+        display: none;
+    }
+    .third:nth-child(2){
+        display: none;
+    }
+    .third:nth-child(3){
+        display: none;
+    }
+    .third:nth-child(4){
+        display: none;
+    }
+
 }
