--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap'); /* FONT-FAMILY HACHI MARU POP */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.container{
+    background-color: rgb(232, 239, 248);
+}
+
+.page_title{
+    font-size: 1.5rem;
+    margin-top: 50px;
+    color: #302e4d;
+}
+
+.page_title_highlight{
+    display: flex;
+    flex-direction: column;
+}
+
+.red_lines{
+    background-color: #cc0000;
+    border-radius: 5px;
+    height: 5px;
+    width: 75px;
+    margin-bottom: 10px;
+}
+
+.red_lines:nth-child(2){
+    width: 50px;
+}
+
+.a_buttons{
+    display: flex;
+    margin-top: 50px;
+}
+
+.a_btn{
+    color: #504e70;
+    text-decoration: none;
+    border: 2px solid #cc0000;
+    border-radius: 5px;
+    transition: 0.5s;
+    margin-right: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 50px;
+    font-weight: 900;
+    outline-width: 0;
+}
+
+.a_btn:hover{
+    background-color: #cc0000;
+    color: white;
+    transition: 0.5s;
+}
+
+/* .page_content{
+} */
+
+
+@media only screen and (max-width:1520px){
+    html{
+        height: 100%;
+    } 
+
+    .a_buttons{
+        justify-content: center;
+    }
+
+    .text_center{
+        text-align: center;
+    }
+    .remove_margin{
+        margin-right: 0;
+    }
+}
+
+@media only screen and (max-width:700px){
+    
 }
