--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,7 +1,7 @@
 <div class="about_container">
 
     <div class="page_content">
-        <div class="page_title">
+        <div class="page_title" id="dark">
             <h1>About me</h1>
             <div class="page_title_highlight" >
                 <span class="red_lines"></span>
@@ -17,7 +17,7 @@
             </div>
             <div class="a_buttons">
                 <a routerLink="/Contact" class="a_btn">Contact me!</a>
-                <a class="a_btn remove_margin">View CV</a>
+                <a href="https://resume.io/r/8qyf8Ayhl" target="_blank" class="a_btn remove_margin">View CV</a>
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
             </li>
             <li>
                 <p><b>Education: </b></p>
-                <p>S.E.F.I (CS)</p>
+                <p>F.S.E.F.I (CS)</p>
             </li>
         </ul>
     </div>
