--- a/src/app/skills-page/skills-page.component.html
+++ b/src/app/skills-page/skills-page.component.html
@@ -10,7 +10,7 @@
         <div class="skills_content text_center">
             <p>I've started learning programming with C++ and learned the basics and O.O.P in it, then did some courses on python on <a href="https://www.edx.org/" target="_blank">edX</a> and <a href="https://www.udemy.com/" target="_blank">Udemy</a>. Also from Udemy did a free course for Java.</p>
             <p>After all that i started learning web development through <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>. From that I learned HTML, CSS and JavaScript by doing some awesome projects (Example: Youtube video page, Apple old site etc.) then i wanted more complexity to my websites and did a course on ASP .NET and builded a website with a connection to a database (SQL) and did a course on Angular too.</p>
-            <p>Currently I am a student at University of Pitesti, S.E.F.I. to be more exact and have no working experience though I want to change that. :)</p>
+            <p>Currently I am a student at University of Pitesti, F.S.E.F.I. to be more exact and have no working experience though I want to change that. :)</p>
             <div class="a_buttons">
                 <a routerLink="/Contact" class="a_btn remove_margin">Contact me!</a>
             </div>
