--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -11,16 +11,9 @@
     display: flex;
 }
 
-.first:nth-child(16){
-    color: #cc0000;
-}
-
-.first:nth-child(22){
-    color: #cc0000;
-}
-
-.first:nth-child(25){
-    color: #cc0000;
+.line{
+    display: flex;
+    justify-content: center;
 }
 
 .social_links{
@@ -30,10 +23,12 @@
 }
 
 .social_btn{
+    color: #cc0000;
+    background-color: #ffffff;
+    border: none;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    color: #cc0000;
     border: none;
     position: relative;
     outline-width: 0;
@@ -41,7 +36,6 @@
 
 .social_btn:hover{
     color: red;
-    background-color: inherit;
     width: 45px;
     height: 45px;
 }
@@ -49,7 +43,6 @@
 .social_btn svg{
     width: 100%;
     height: 100%;
-    border-radius: 50%;
 }
 
 .home_btn{
@@ -58,37 +51,53 @@
 
 @media only screen and (max-width:1520px){
     .home_container{
-        height: 79vh;
+        height: 79.2vh;
         padding-right: 0;
     }
 }
 
-@media only screen and (max-width:895px){
-    .first:nth-child(16){
-        color: blue;
-    }
-}
 
-@media only screen and (max-width:700px){
-
+@media only screen and (max-width:900px){
     .home_container{
         height: 87.5vh;
     }
 
-    .second:nth-child(1){
-        display: none;
+    .string_line{
+        flex-direction: column;
     }
-    .third:nth-child(1){
-        display: none;
-    }
-    .third:nth-child(2){
-        display: none;
-    }
-    .third:nth-child(3){
-        display: none;
-    }
-    .third:nth-child(4){
+
+    .s1:nth-child(1){
         display: none;
     }
 
+    .s2:nth-child(1){
+        display: none;
+    }
+    .s3:nth-child(1){
+        display: none;
+    }
+
+    .s4:nth-child(1){
+        display: none;
+    }
+    .s4:nth-child(2){
+        display: none;
+    }
+    .s4:nth-child(3){
+        display: none;
+    }
+    .s4:nth-child(4){
+        display: none;
+    }
+
+    .s5:nth-child(1){
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width:700px){
+    .home_container{
+        height:94.7vh ;
+    }
 }
