--- a/src/app/projects-page/projects-page.component.css
+++ b/src/app/projects-page/projects-page.component.css
@@ -13,14 +13,15 @@
     flex-basis: 300px;
     border-radius: 5%;
     padding: 10px;
-    background-color: rgb(251, 252, 250);
-    border: 1px solid rgb(207, 211, 214);
+    background-color: #ffffff;
+    border: 5px solid grey;
     margin-right: 50px;
     margin-top: 50px;
     transition: 0.5s;
-
+    color:#504e70; ;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -65,6 +66,8 @@
 }
 
 .card:hover{
+    height: 525px;
+    flex-basis: 325px;
     border-color: #cc0000;
     transition: 0.5s;
     box-shadow: 2px 2px 5px grey;
