--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -17,7 +17,7 @@
                     <input type="text" name="Subject" placeholder="Subject">
                     <textarea name="" cols="30" rows="10" placeholder="Message"></textarea>
                 </div>
-                <button class="a_btn">Send</button>
+                <button class="a_btn send_btn" disabled>Send</button>
             </form>
         </div>
     </div>
